Track team sides for each player
