# common/types/player.ts
@@ -1,7 +1,9 @@
 import { TTeamAB } from './matchMap';
+import { TTeamSides } from './stuff';
 
 export interface IPlayer {
 	steamId64: string;
 	name: string;
 	team?: TTeamAB;
+	side?: TTeamSides | null;
 }
